--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "audit",
         "audits"
     ],
-    "homepage": "http://github.com/ProAI/eloquent-versioning",
+    "homepage": "http://github.com/innoved/eloquent-versioning",
     "license": "MIT",
     "authors": [
         {
@@ -35,12 +35,12 @@
     },
     "autoload": {
         "psr-4": {
-            "ProAI\\Versioning\\": "src/"
+            "Innoved\\Versioning\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "ProAI\\Versioning\\Tests\\": "tests/"
+            "Innoved\\Versioning\\Tests\\": "tests/"
         }
     },
     "extra": {
